Save todoItem to localStorage.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
 
     <form>
-        <input type="text">
+        <input type="text" placeholder="請輸入待辦事項" required>
         <input type="number" min="1" max="12" placeholder="M" required>
         <input type="number" min="1" max="31" placeholder="D" required>
         <button>Add into List</button>
