--- a/index.html
+++ b/index.html
@@ -5,31 +5,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Jimmy Hsu">
+    <title>Todo-List</title>
+    <link rel="stylesheet" href="./style/style.css">
+    <!-- google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Todo List</title>
-    <link rel="stylesheet" href="./style/style.css">
 </head>
 
 <body>
-    <header>
-        <h1>Jimmy Hsu Todo List</h1>
-    </header>
-
+    <h1>Jimmy's Todo-List</h1>
     <form>
-        <input type="text" placeholder="請輸入待辦事項" required>
-        <input type="number" min="1" max="12" placeholder="M" required>
-        <input type="number" min="1" max="31" placeholder="D" required>
-        <button>Add into List</button>
+        <input type="text" placeholder="輸入待辦事項" maxlength="13" />
+        <input type="number" placeholder="月" min="1" max="12" />
+        <input type="number" placeholder="日" min="1" max="31" />
+        <button>+</button>
     </form>
 
     <div class="sort">
-        <button>Sort By Time</button>
+        <button>Sort by time</button>
     </div>
 
-    <section></section>
+    <section class="list">
+
+    </section>
 </body>
 <script src="./app.js"></script>
 
