--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <h1>Jimmy's Todo-List</h1>
+    <h1>資訊室 代辦事項</h1>
     <form>
         <input type="text" placeholder="輸入待辦事項" maxlength="13" />
         <input type="number" placeholder="月" min="1" max="12" />
