--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 </head>
 
 <body>
-    <h1>資訊室 代辦事項</h1>
+    <h1>Todo-List</h1>
     <form>
         <input type="text" placeholder="輸入待辦事項" maxlength="13" />
         <input type="number" placeholder="月" min="1" max="12" />
         <input type="number" placeholder="日" min="1" max="31" />
-        <button>+</button>
+        <button id="mic"><i class="fas fa-microphone"></i></button>
+        <button id="add">+</button>
     </form>
 
     <div class="sort">
