Add Date on input bar.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 <body>
     <h1>Todo-List</h1>
+    <h2 id="currentDate"></h2>
     <form>
         <input type="text" placeholder="輸入待辦事項" maxlength="13" />
         <input type="number" placeholder="月" min="1" max="12" />
@@ -24,7 +25,6 @@
         <button id="mic"><i class="fas fa-microphone"></i></button>
         <button id="add">+</button>
     </form>
-
     <div class="sort">
         <button>Sort by time</button>
     </div>
